--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "encoding": "^0.1.13",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "firebase": "^9.15.0",
